# RMoc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clean.sh  compile_commands.json  run.sh
.cache/clangd/index/: main.c.A14C6DC044BB17DF.idx  test_main.c.6788CFD44CC1C3E3.idx  util.c.C8D4212A2F4AD282.idx  util.h.DEBB4505951E1D19.idx
src/: main.c
tests/: CMakeLists.txt  test_main.c
